--- a/doc/reference.adoc
+++ b/doc/reference.adoc
@@ -3,7 +3,7 @@
 === Data type conversion
 
 When reading data from a data source, Metadb will automatically adjust column
-data types on the fly in a number of cases:
+data types in a number of cases:
 
 * A data type in the source has changed in a way that cannot be applied safely
   by Metadb without more information.
@@ -291,16 +291,11 @@ certain tables.
 
 === External SQL directives
 
-Metadb allows scheduling external SQL files to run on a regular
-basis. At present, the location and frequency of SQL files to run is
-hardcoded based the `module` setting that is specified when a data
-source is configured (see below). If this is set to either `folio` or
-`reshare`, it enables the external SQL from the appropriate known
-location.  A relatively high priority feature would be to add
-configuration options for this facility, including the Git repository,
-tag, path, etc., and time of day and frequency when the SQL should
-run.  There is https://github.com/metadb-project/metadb/issues/43[a
-placeholder issue for this job-scheduler facility].
+Metadb allows scheduling external SQL files to run on a regular basis.  At
+present this feature is enabled automatically when the "folio" or "reshare"
+module has been specified in the data source.  Details such as the location of
+the SQL files and when they are run are currently hardcoded but will be
+configurable in the future.
 
 Each SQL statement should be separated from others by an empty line, and any
 tables created should not specify a schema name.
@@ -322,10 +317,9 @@ SELECT . . . ;
 
 ==== --metadb:table
 
-The `--metadb:table` directive declares that the SQL file updates a
-specific table.  This allows Metadb to report on the status of the
-table by maintaining the the `metadb.table_update` table described
-below.  The directive takes the form:
+The `--metadb:table` directive declares that the SQL file updates a specific
+table.  This allows Metadb to report on the status of the update in the
+`metadb.table_update` system table.  The directive takes the form:
 
 ----
 --metadb:table <table>
@@ -397,9 +391,7 @@ ALTER DATA SOURCE sensor OPTIONS (SET consumergroup 'metadb_sensor_1');
 
 [.aqua-background]#Metadb 1.2#
 
-Change a table definition. This is essentially the same as ALTER TABLE
-in the underlying PostgreSQL database, but performs additional checks
-and should be used instead of the lower-level equivalent.
+Change a table definition
 
 [source,subs="verbatim,quotes"]
 ----
@@ -496,19 +488,12 @@ CREATE DATA ORIGIN `*_origin_name_*`
 [discrete]
 ===== Description
 
-CREATE DATA ORIGIN defines a new origin. Data origins form essentially
-a controlled vocabulary for the `__origin` column in tables. They are
-used primarily when using a ReShare data source to indicate which
-tenant in a consortium a given row was taken from.
-
-(When using Metadb
-for FOLIO, each tenant’s data goes into a separate database; but when
-using it for ReShare, all the tenants of a consortium go into a single
-shared database. ReShare internally uses FOLIO-style tenants to
-represent the tenants in a consortium, and Metadb combines the tables
-from all the tenants into a single table and fills in `__origin` to
-tell users which tenant a record belongs to.)
-
+CREATE DATA ORIGIN defines a new origin.  An origin name can be stored by
+Metadb in the `__origin` column to tag individual records.  The use and meaning
+of origins are typically defined by the application or by a Metadb module, but
+in general origins allow grouping data independently of data sources.  This can
+be useful because data sources may be dictated by how the data are collected,
+e.g. geographically in a sensor network.
 
 .Note
 ****
@@ -552,16 +537,13 @@ CREATE DATA SOURCE `*_source_name_*` TYPE *_source_type_*
 CREATE DATA SOURCE defines connection settings for an external data source.
 
 The new data source starts out in synchronizing mode, which pauses periodic
-transforms and running external SQL.  When the initial snapshot has finished
-streaming, the message "source snapshot complete (deadline exceeded)" will be
-written to the log.  To complete the synchronization, the Metadb server should
-be stopped in order to run `metadb endsync`, and after the "endsync" has
-completed, the Metadb server can be started again.
-
-(The "deadline exceeded" message here refers to a timeout when waiting
-for further change events. So it is communicating that the update has
-completed, not that it has been abandoned due to running out of
-allocated time.)
+transforms and running external SQL.  After no new snapshot records have been
+received for a significant period of time, which suggests that the initial
+snapshot has likely finished streaming, the message "source snapshot complete
+(deadline exceeded)" will be written to the log.  To complete the
+synchronization, the Metadb server should be stopped in order to run `metadb
+endsync`, and after the "endsync" has completed, the Metadb server can be
+started again.
 
 [discrete]
 ===== Parameters
